# matsuzawa-20260205-qdrant

./: pyproject.toml
.github/workflows/: compile_latex.yml  run_evaluation.yml  run_full_experiment.yml  run_trial_experiment.yml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-qwen3-4b-ARC.yaml  comparative-1-qwen3-8b-ARC.yaml  proposed-qwen3-4b-ARC.yaml  proposed-qwen3-8b-ARC.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
